--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,19 @@
   <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="4127298" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4127298.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ai-nuclear-energy-background-future-innovation-disruptive-technology" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ai-nuclear-energy-background-future-innovation-disruptive-technology.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="maximalfocus-VT4rx775FT4-unsplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\maximalfocus-VT4rx775FT4-unsplash.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ryzen9_7950x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ryzen9_7950x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="s24ultra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\s24ultra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
